Set up GitHub Actions CI workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,12 @@ dev =
     pre-commit
     isort
     black
+    mypy
 
 [options.entry_points]
 spacy_languages =
     och = spacy_och:OldChinese
+
+[mypy]
+plugins = thinc.mypy
+no_implicit_optional = True
