Correct entrypoint syntax

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,8 +52,11 @@ dev =
     mypy
 
 [options.entry_points]
-spacy_languages =
-    och = spacy_och:OldChinese
+spacy_factories =
+    phonemizer = phony.pipeline.phonemizer:make_phonemizer
+
+spacy_scorers =
+    phoneme_scorer.v1 = phony.pipeline.phonemizer:make_phoneme_scorer
 
 [mypy]
 plugins = thinc.mypy
