Flatten pipeline directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,10 +53,10 @@ dev =
 
 [options.entry_points]
 spacy_factories =
-    phonemizer = phony.pipeline.phonemizer:make_phonemizer
+    phonemizer = phony.pipeline:make_phonemizer
 
 spacy_scorers =
-    phoneme_scorer.v1 = phony.pipeline.phonemizer:make_phoneme_scorer
+    phoneme_scorer.v1 = phony.pipeline:make_phoneme_scorer
 
 [mypy]
 plugins = thinc.mypy
