Extract scorer to new module

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ spacy_factories =
     phonemizer = phony.pipeline:make_phonemizer
 
 spacy_scorers =
-    phoneme_scorer.v1 = phony.pipeline:make_phoneme_scorer
+    phoneme_scorer.v1 = phony.scorer:make_phoneme_scorer
 
 [mypy]
 plugins = thinc.mypy
