--- a/setup.cfg
+++ b/setup.cfg
@@ -46,10 +46,11 @@ where = src
 
 [options.extras_require]
 dev =
-    pre-commit
-    isort
     black
+    coverage
+    isort
     mypy
+    pre-commit
 
 [options.entry_points]
 spacy_factories =
