Add info about version numbers to README and bump version to 0.2.0-dev

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = spacy-phony
-version = 0.1.0
+version = 0.2.0-dev
 description = phonology in spaCy!
 url = https://github.com/direct-phonology/phoNy
 author = Nick Budak
@@ -57,6 +57,9 @@ dev =
 [options.entry_points]
 spacy_factories =
     phonemizer = phony.pipeline:make_phonemizer
+
+spacy_architectures =
+    phony.MultiTagger.v1 = phony.ml:build_multi_tagger_model
 
 spacy_scorers =
     phoneme_scorer.v1 = phony.scorer:make_phoneme_scorer
